5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1671_1103.log
== SUBMITION (2019-04-29 13:55:53) 
-- CODE:
x=float(input("primeira entrada:"))
a=float(input("segunda entrada:"))
b=float(input("terceira entrada:"))
if(b>a):
	if(x>=a and x<=b):
		print(x, "pertence ao intervalo",a,",",b)
	else:
		print(x,"nao pertence ao intervalo",a,",",b)
	else:
		print("Entradas",a,"e",b,"invalidas")


-- EXECUTION TIME:
0.18586
-- ERROR:
  File "/home/codebench/codes/1671/1103/main.py", line 9
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:55:58) 
-- CODE:
x=float(input("primeira entrada:"))
a=float(input("segunda entrada:"))
b=float(input("terceira entrada:"))
if(b>a):
	if(x>=a and x<=b):
		print(x, "pertence ao intervalo",a,",",b)
	else:
		print(x,"nao pertence ao intervalo",a,",",b)
	else:
		print("Entradas",a,"e",b,"invalidas")


-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:56:42) 
-- CODE:
x=float(input("primeira entrada:"))
a=float(input("segunda entrada:"))
b=float(input("terceira entrada:"))
if(b>a):
	if(x>=a and x<=b):
		print(x, "pertence ao intervalo",a,",",b)
	else:
		print(x,"nao pertence ao intervalo",a,",",b)
else:
		print("Entradas",a,"e",b,"invalidas")


-- EXECUTION TIME:
0.176701
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
